# frog-art

./: .gitignore  Dockerfile  README.md  docker-compose.yml  launch.py  pyproject.toml  scraper.py
.expo/: README.md
.github/workflows/: terraform_apply.yml
backend/: Dockerfile  celerybeat-schedule.db  pyproject.toml
backend/api/: __init__.py  main.py  models.py  settings.py
backend/api/endpoints/: compare.py  embeddings.py
backend/api/tasks/: cron_jobs.py
backend/api/utils/: model.py  populate_chromadb.py  scraper.py
backend/utils/: model.py  populate_chromadb.ipynb  populate_chromadb.py  test_model.ipynb
front-end/: app.json  package-lock.json  package.json
front-end/app/: _layout.tsx  camera.tsx  index.tsx  modal.tsx  result.tsx
front-end/components/: PhotoPicker.tsx
frontend/: package-lock.json  tsconfig.json
frontend-improved/: Dockerfile  nginx.conf  package-lock.json  package.json  svelte.config.js  vite.config.js
frontend-improved/.svelte-kit/: ambient.d.ts  non-ambient.d.ts
frontend-improved/src/: app.css  app.html
frontend-improved/src/lib/: stores.js
frontend-improved/src/routes/: +error.svelte  +layout.js  +layout.svelte  +page.svelte
frontend/app/: camera.tsx  modal.tsx  result.tsx  style.ts
frontend/components/: PhotoPicker.tsx
infrastructure/ecs_infra/: main.tf
infrastructure/light_sail/: main.tf  setup.sh
infrastructure/lightsail_infra/: main.tf  setup.sh  variables.tf
v2/: app.py  basevectordb.py  common.py  convert_model.ipynb  embedding_store.py  scraper.py  utils.py
(+90 files in other folders)
