[project]
name = "api"
version = "0.1.0"
description = ""
authors = [
    {name = "Rutger van de Leur",email = "rutgervandeleur@gmail.com"}
]
packages = [
    { include = "api"},
]
requires-python = ">=3.11.10,<3.14"
dependencies = [

    "fastapi[standard] (>=0.118.0,<0.119.0)",
    "chromadb (>=1.1.1,<2.0.0)",
    "numpy (>=2.3.3,<3.0.0)",
    "uvicorn (>=0.37.0,<0.38.0)",
    "transformers[torch] (==4.56.0)",
    "torchvision (>=0.23.0,<0.24.0)",
    "torch (>=2.8.0,<3.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "celery (>=5.5.3,<6.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"